@@ -18,7 +18,6 @@
 // File: attack.php
 
 include './global_includes.php';
-include './includes/collect_bounty.php';
 
 if (check_login ($db, $lang, $langvars))
 {
@@ -587,14 +586,14 @@ else
                                          "dev_lssd = 'N' WHERE ship_id = ?;", array ($start_energy, $rating, $targetinfo['ship_id']));
                     DbOp::dbResult ($db, $resx, __LINE__, __FILE__);
                     PlayerLog::writeLog ($db, $targetinfo['ship_id'], LOG_ATTACK_LOSE, "$playerinfo[character_name]|Y");
-                    collect_bounty ($db, $playerinfo['ship_id'], $targetinfo['ship_id']);
+                    BntBounty::collect ($db, $playerinfo['ship_id'], $targetinfo['ship_id']);
                     AdminLog::writeLog ($db, 950, "*|{$playerinfo['ship_id']}|{$targetinfo['ship_id']}|Just lost the Escape Pod.");
                 }
                 else
                 {
                     PlayerLog::writeLog ($db, $targetinfo['ship_id'], LOG_ATTACK_LOSE, "$playerinfo[character_name]|N");
                     BntPlayer::kill ($db, $targetinfo['ship_id'], false, $langvars);
-                    collect_bounty ($db, $playerinfo['ship_id'], $targetinfo['ship_id']);
+                    BntBounty::collect ($db, $playerinfo['ship_id'], $targetinfo['ship_id']);
                     AdminLog::writeLog ($db, 950, "*|{$playerinfo['ship_id']}|{$targetinfo['ship_id']}|Didn't have the Escape Pod.");
                 }
 
@@ -616,7 +615,7 @@ else
                         {
                             $rating_change = 0 - $rating_change;
                             PlayerLog::writeLog ($db, $targetinfo['ship_id'], LOG_ATTACK_LOSE, "$playerinfo[character_name]|N");
-                            collect_bounty ($db, $playerinfo['ship_id'], $targetinfo['ship_id']);
+                            BntBounty::collect ($db, $playerinfo['ship_id'], $targetinfo['ship_id']);
                             BntPlayer::kill ($db, $targetinfo['ship_id'], false, $langvars);
 
                             AdminLog::writeLog ($db, 950, "*|{$playerinfo['ship_id']}|{$targetinfo['ship_id']}|Hope fully we only killed off the AI.");
@@ -735,13 +734,13 @@ else
                                          "dev_fuelscoop = 'N', dev_minedeflector = 0, on_planet = 'N', rating = ?, dev_lssd = 'N' " .
                                          "WHERE ship_id = ?", array ($start_energy, $rating, $playerinfo['ship_id']));
                     DbOp::dbResult ($db, $resx, __LINE__, __FILE__);
-                    collect_bounty ($db, $targetinfo['ship_id'], $playerinfo['ship_id']);
+                    BntBounty::collect ($db, $targetinfo['ship_id'], $playerinfo['ship_id']);
                 }
                 else
                 {
                     echo "Didnt have pod?! $playerinfo[dev_escapepod]<br>";
                     BntPlayer::kill ($db, $playerinfo['ship_id'], false, $langvars);
-                    collect_bounty ($db, $targetinfo['ship_id'], $playerinfo['ship_id']);
+                    BntBounty::collect ($db, $targetinfo['ship_id'], $playerinfo['ship_id']);
                 }
 
                 if ($targetarmor > 0)
