@@ -44,7 +44,6 @@ function planet_combat ($db)
     global $l_cmb_citizenswanttodie, $l_cmb_youmaycapture, $l_cmb_planetnotdefeated, $l_cmb_planetstatistics;
     global $l_cmb_fighterloststat, $l_cmb_energyleft, $l_planet_capture1;
 
-    include_once './includes/collect_bounty.php';
     include_once './includes/calc_score.php';
     include_once './includes/ship_to_ship.php';
 
@@ -421,12 +420,12 @@ function planet_combat ($db)
             echo "<center><font color='white'>$l_cmb_escapepod</font></center><br><br>";
             $resx = $db->Execute ("UPDATE {$db->prefix}ships SET hull=0,engines=0,power=0,sensors=0,computer=0,beams=0,torp_launchers=0,torps=0,armor=0,armor_pts=100,cloak=0,shields=0,sector=0,ship_organics=0,ship_ore=0,ship_goods=0,ship_energy=?,ship_colonists=0,ship_fighters=100,dev_warpedit=0,dev_genesis=0,dev_beacon=0,dev_emerwarp=0,dev_escapepod='N',dev_fuelscoop='N',dev_minedeflector=0,on_planet='N',dev_lssd='N' WHERE ship_id=?", array ($start_energy, $playerinfo['ship_id']));
             DbOp::dbResult ($db, $resx, __LINE__, __FILE__);
-            collect_bounty ($db, $planetinfo['owner'], $playerinfo['ship_id']);
+            BntBounty::collect ($db, $planetinfo['owner'], $playerinfo['ship_id']);
         }
         else
         {
             BntPlayer::kill ($db, $playerinfo['ship_id'], false, $langvars);
-            collect_bounty ($db, $planetinfo['owner'], $playerinfo['ship_id']);
+            BntBounty::collect ($db, $planetinfo['owner'], $playerinfo['ship_id']);
         }
     }
     else
